# tmark

./: LICENSE  README.md  pyproject.toml
examples/tmark/: tmark.md
src/tmark/: __init__.py  argparse.py  token.py
src/tmark/components/: slide.py
src/tmark/styles/: app.css
