[project]
name = "tmark"
version = "0.1.0"
description = "Markdown Slideshow in Terminal"
readme = "README.md"
authors = [
    { name = "jtawari095", email = "jtawari095@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "mistune>=3.2.0",
    "more-itertools>=11.0.2",
    "pydantic>=2.13.3",
    "sympy>=1.14.0",
    "textual>=8.2.4",
    "textual-image>=0.12.0",
    "typed-argument-parser>=1.12.0",
]

[project.scripts]
tmark = "tmark:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
